fix: fixed scroll visiblitly

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -249,3 +249,7 @@
 .icon path {
   fill: currentColor;
 }
+
+.hidescroll::-webkit-scrollbar {
+   display: none;
+}
